--- a/OnlineShop/Areas/Admin/Views/Account/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Account/Index.cshtml
@@ -8,6 +8,12 @@
 @section header{
     Quản lý người dùng
 }
+
+@section jsFooter{
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="~/Assets/Admin/JS/Controller/accountController.js"></script>
+}
+
 <div class="row">
     <div class="col-xs-12">
         <div class="box">
@@ -61,31 +67,19 @@
                             <td>@item.Email</td>
                             <td>@item.Phone</td>
                             <td>@item.Address</td>
-                            @if (item.Status)
-                            {
-                                <td><span class="label label-success">Kích hoạt</span></td>
-                            }
-                            else
-                            {
-                                <td><span class="label label-danger">Khóa</span></td>
-                            }
+                            <td><a href="#" class="btnChangeStatus label label-success" data-id="@item.ID">@(item.Status == true ? "Kích hoạt" : "Khóa")</a></td>
                             <td>
                                 @Html.ActionLink("Chi tiết", "Details", new { id = item.ID }) |
                                 @Html.ActionLink("Sửa", "Edit", new { id = item.ID }) |
-                                
                                 @Ajax.ActionLink("Xóa", "Delete", new { id = item.ID }, new AjaxOptions
                            {
                                HttpMethod = "Delete",
                                Confirm = "Bạn muốn xóa tài khoản này?",
                                // dùng ajax thì browser nó sẽ không load lại trang
-                               OnSuccess = "$('#row_"+@item.ID+"').remove()",
+                               OnSuccess = "$('#row_" + @item.ID + "').remove()",
                                //OnComplete = "window.location.replace('" + @Url.Action("Index", "Account") + "');"
                            }, new { @class = "itemDelete" })
 
-
-
-
-                                @*@Html.ActionLink("Xóa", "Delete", new { id = item.ID }, new { onclick = "return confirm('are you sure you wish to delete this article?');" })*@
                             </td>
                         </tr>
                     }
@@ -102,59 +96,3 @@
 </div>
 
 
-@*<div class="modal fade" id="confirmmodal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title">Thông báo</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Bạn muốn xóa tài khoản này?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default " id="btnCancel" data-dismiss="modal">Hủy</button>
-                    <a  id="btnContinueDelete" class="btn btn-primary">Xác nhận</a>
-                </div>
-            </div>
-            <!-- /.modal-content -->
-        </div>
-        <!-- /.modal-dialog -->
-    </div>
-    <!-- /.modal -->
-
-
-    <script>
-        $(document).ready(function () {
-            $('a[data-confirm]').click(function (ev) {
-                var href = $(this).attr('href');
-
-                if (!$('#dataConfirmModal').length) {
-                    $('body').append('<div id="dataConfirmModal" class="modal" role="dialog" aria-labelledby="dataConfirmLabel" aria-hidden="true"><div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button><h3 id="dataConfirmLabel">Please Confirm</h3></div><div class="modal-body"></div><div class="modal-footer"><button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button><a class="btn btn-primary" id="dataConfirmOK">OK</a></div></div>');
-                }
-                $('#dataConfirmModal').find('.modal-body').text($(this).attr('data-confirm'));
-                $('#dataConfirmOK').attr('href', href);
-                $('#dataConfirmModal').modal({ show: true });
-                return false;
-            });
-        });
-
-        //$(document).ready(function () {
-        //    var href = $('a[data-confirm]').attr('data-href');
-        //    $('#btnContinueDelete').attr('href', href);
-        //    alert("sdad");
-        //});
-        //function Confirm() {
-        //    $('a[data-href]').click(function (ev) {
-        //        var href = $(this).attr('data-href');
-
-        //        //$('#confirmmodal').find('.modal-body').text($(this).attr('data-confirm'));
-        //        $('#btnContinueDelete').attr('href', href);
-        //        $('#confirmmodal').modal({ show: true });
-        //    };
-        //    }
-
-
-    </script>*@
