--- a/OnlineShop/Areas/Admin/Views/Shared/_LeftNavigation.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Shared/_LeftNavigation.cshtml
@@ -46,7 +46,8 @@
                     </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="/Admin/Account"><i class="fa fa-user"></i> Người dùng</a></li>
+                    <li><a href="/Admin/Account"><i class="fa fa-user"></i> Danh sách người dùng</a></li>
+                    <li><a href="/Admin/Account/Create"><i class="fa  fa-user-plus"></i> Thêm người dùng</a></li>
                     <li><a href="/Admin/FeedBack"><i class="fa  fa-comments"></i> Phản hồi</a></li>
                 </ul>
             </li>
@@ -76,7 +77,8 @@
                 </a>
                 <ul class="treeview-menu">
                     <li><a href="/Admin/CategoryNews"><i class="fa fa-list"></i> Danh mục tin tức</a></li>
-                    <li><a href="/Admin/Content"><i class="fa fa-newspaper-o"></i> Tin tức</a></li>
+                    <li><a href="/Admin/Content"><i class="fa fa-newspaper-o"></i> Danh sách tin tức</a></li>
+                    <li><a href="/Admin/Content/Create"><i class="fa fa-plus-circle"></i> Thêm tin tức</a></li>
 
                 </ul>
             </li>
