--- a/OnlineShop/Areas/Admin/Views/Content/Edit.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Content/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Model.EF.Content
 
 @{
-    ViewBag.Title = "Thêm mới bài viết";
+    ViewBag.Title = "Chỉnh sửa bài viết";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 @section header{
-    Thêm mới bài viết
+    Chỉnh sửa bài viết
 }
 
 
@@ -42,9 +42,11 @@
             <div class="box-header with-border">
                 <h3 class="box-title">Thông tin bài viết</h3>
             </div>
+
+            
             <!-- /.box-header -->
             <!-- form start -->
-            @using (Html.BeginForm("Create", "Content", FormMethod.Post))
+            @using (Html.BeginForm("Edit", "Content", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
