--- a/OnlineShop/Areas/Admin/Views/Login/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Login/Index.cshtml
@@ -40,13 +40,14 @@
                 @Html.ValidationSummary(false, "", new { @class = "text-danger" });
                 <div class="form-group has-feedback">
                     @Html.TextBoxFor(model => model.UserName, new { @class = "form-control", @autofocus = "autofocus", @placeholder = "Tên đăng nhập" })
-                    <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                    <span class="fa fa-user form-control-feedback"></span>
                 </div>
                 <div class="form-group has-feedback">
                     @Html.PasswordFor(model => model.PassWord, new { @class = "form-control" })
-                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                    <span class="fa fa-lock form-control-feedback"></span>
                 </div>
                 <div class="row">
+                    <!--
                     <div class="col-xs-8">
                         <div class="checkbox icheck">
                             <label>
@@ -54,8 +55,9 @@
                             </label>
                         </div>
                     </div>
+                        -->
                     <!-- /.col -->
-                    <div class="col-xs-4">
+                    <div class="col-xs-12">
                         <button type="submit" class="btn btn-primary btn-block btn-flat">Đăng nhập</button>
                     </div>
                     <!-- /.col -->
