--- a/OnlineShop/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -215,6 +215,13 @@
             <!-- Main content -->
 
             <section class="content">
+                @if (@TempData["AlertMessage"] != null)
+                {
+                    <div id="alertbox" class="alert  @TempData["AlertType"] hide  " role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        @TempData["AlertMessage"]
+                    </div>
+                }
 
                 @RenderBody()
 
@@ -433,20 +440,19 @@
 
     <!-- Bootstrap 3.3.7 -->
     <script src="~/Assets/Admin/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-   
-   
+
+
     <!-- FastClick -->
     <script src="~/Assets/Admin/bower_components/fastclick/lib/fastclick.js"></script>
     <!-- AdminLTE App -->
-    <script src="~/Assets/Admin/dist/js/adminlte.min.js"></script>
-   
+    <script src="~/Assets/Admin/dist/js/adminlte.js"></script>
 
     <!-- CKFinder -->
     <script src="~/Assets/Admin/plugins/ckfinder/ckfinder.js"></script>
     <script src="~/Assets/Admin/plugins/ckeditor/ckeditor.js"></script>
-    
+
 
     @RenderSection("jsFooter", required: false)
-   
+
 </body>
 </html>
