--- a/OnlineShop/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -435,9 +435,7 @@
     <!-- ./wrapper -->
     <!-- jQuery 3 -->
     <script src="~/Scripts/jquery-3.2.1.js"></script>
-    <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
-
-
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     <!-- Bootstrap 3.3.7 -->
     <script src="~/Assets/Admin/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
@@ -451,6 +449,8 @@
     <script src="~/Assets/Admin/plugins/ckfinder/ckfinder.js"></script>
     <script src="~/Assets/Admin/plugins/ckeditor/ckeditor.js"></script>
 
+    <!-- BootBoxJS -->
+    <script src="~/Scripts/bootbox.min.js"></script>
 
     @RenderSection("jsFooter", required: false)
 
