--- a/OnlineShop/Areas/Admin/Views/Account/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Account/Index.cshtml
@@ -10,7 +10,6 @@
 }
 
 @section jsFooter{
-
     <script src="~/Assets/Admin/JS/Controller/accountController.js"></script>
 }
 
@@ -23,12 +22,17 @@
                     <h3 class="box-title">Danh sách người dùng</h3>
 
                     <div class="box-tools pull-right">
-                        <div class="input-group input-group-sm" style="width: 250px;">
+
+                        <div class="input-group input-group-sm col-md-4 pull-right col-xs-offset-1">
                             @Html.TextBox("searchString", ViewBag.CurrentFilter as string, new { @class = "form-control pull-right", @placeholder = "Tìm kiếm" })
                             <div class="input-group-btn">
-                                <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                                <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
                             </div>
 
+                        </div>
+
+                        <div class="pull-right">
+                            <a href="/Admin/Account/Create" class="btn btn-info btn-sm"> <i class="fa  fa-user-plus"></i>Thêm mới</a>
                         </div>
                     </div>
 
@@ -52,7 +56,6 @@
                             @Html.ActionLink("Email", "Index", new { sortOrder = ViewBag.EmailSortPara })
                         </th>
                         <th>Số điện thoại</th>
-                        <th>Địa chỉ</th>
                         <th>
                             @Html.ActionLink("Trạng thái", "Index", new { sortOrder = ViewBag.StatusSortPara })
                         </th>
@@ -66,38 +69,23 @@
                             <td>@item.Name</td>
                             <td>@item.Email</td>
                             <td>@item.Phone</td>
-                            <td>@item.Address</td>                            
                             <td>
-                                    @Html.ActionLink((@item.Status == true ? "Kích hoạt" : "Khóa"),"ChangeStatus","Account",new { id = @item.ID},new { @class=(@item.Status == true ? "btnchangestatus label label-success" : "btnchangestatus label label-danger") , @data_id=@item.ID  })
-                                </td>
-                            @{
-                                #region các cách dùng ajax
-/*
- @*<td>
-     @Ajax.ActionLink((@item.Status == true ? "Kích hoạt" : "Khóa"), "ChangeStatus", new { id = item.ID }, new AjaxOptions
-{
-    HttpMethod = "POST",
-    Confirm = (@item.Status == true ? "Bạn muốn khóa tài khoản này?" : "Bạn muốn kích hoạt tài khoản này?"),
-    OnSuccess = "changeStatusSuccess(" + @item.ID + ");"
-}, new { @id = "status_" + item.ID, @class = (@item.Status == true ? "label label-success" : "label label-danger") })
- </td>*@
- */
-#endregion
-                            }
+                                @Html.ActionLink((@item.Status == true ? "Kích hoạt" : "Khóa"), "ChangeStatus","Account",new { id = @item.ID }, new { @class = (@item.Status == true ? "btnchangestatus label label-success" : "btnchangestatus label label-danger"), @data_id = @item.ID })</td>
                             
+
                             <td>
                                 @Html.ActionLink("Chi tiết", "Details", new { id = item.ID }) |
                                 @Html.ActionLink("Sửa", "Edit", new { id = item.ID }) |
                                 @Ajax.ActionLink("Xóa", "Delete", new { id = item.ID }, new AjaxOptions
-                           {
-                               HttpMethod = "Delete",
-                               Confirm = "Bạn muốn xóa tài khoản này?",
-                               OnSuccess = "$('#row_" + @item.ID + "').remove()",
-                           })
+                                {
+                                    HttpMethod = "Delete",
+                                    Confirm = "Bạn muốn xóa tài khoản này?",
+                                    OnSuccess = "$('#row_" + @item.ID + "').remove()",
+                                })
 
                             </td>
                         </tr>
-                                }
+                    }
                 </table>
             </div>
             <!-- /.box-body -->
