--- a/OnlineShop/Areas/Admin/Views/Product/Create.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Product/Create.cshtml
@@ -9,6 +9,10 @@
     Thêm sản phẩm
 }
 
+@section jsFooter{
+    <script src="~/Assets/Admin/JS/View/Product/create.js"></script>
+}
+
 <div class="row">
     <!-- left column -->
     <div class="col-md-10 col-md-offset-1">
@@ -37,7 +41,7 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Code)
+                        @Html.LabelFor(model => model.Code) <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.Code, new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
                     </div>
@@ -49,14 +53,15 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Description)
-                        @Html.TextBoxFor(model => model.Description, new { @class = "form-control" })
+                        @Html.LabelFor(model => model.Description) <span class="text-danger">*</span>
+                        @Html.TextBoxFor(model => model.Description, new { @class = "form-control", @id = "product-description" })
                         @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Image)
-                        @Html.TextBoxFor(model => model.Image, new { @class = "form-control" })
+                        @Html.LabelFor(model => model.Image) <span class="text-danger">*</span>
+                        @Html.TextBoxFor(model => model.Image, new { @class = "form-control", @id = "image-product" })
+                        <a href="#" id="btn-select-image">Chọn ảnh</a>
                         @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
                     </div>
 
@@ -67,28 +72,31 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Price)
-                        @Html.TextBoxFor(model => model.Price, new { @class = "form-control" })
+                        @Html.LabelFor(model => model.Price) <span class="text-danger">*</span>
+                        @Html.TextBoxFor(model => model.Price, new { @class = "form-control", @type = "number", @min = "0" })
                         @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.PromotionPrice)
-                        @Html.TextBoxFor(model => model.PromotionPrice, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.PromotionPrice, new { @class = "form-control", @type = "number", @min = "0" })
                         @Html.ValidationMessageFor(model => model.PromotionPrice, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.IncludeVAT)
                         <div class="checkbox">
-                            @Html.TextBoxFor(model => model.IncludeVAT)
+                            <label>
+                                @Html.CheckBoxFor(model => model.IncludeVAT)
+                                Đã bao gồm VAT
+                            </label>
                             @Html.ValidationMessageFor(model => model.IncludeVAT, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Quantity)
-                        @Html.TextBoxFor(model => model.Quantity, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.Quantity, new { @class = "form-control", @type = "number", @min = "0" })
                         @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
                     </div>
 
@@ -106,7 +114,7 @@
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Warranty)
-                        @Html.TextBoxFor(model => model.Warranty, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.Warranty, new { @class = "form-control", @type = "number", @min = "0", @max = "50" })
                         @Html.ValidationMessageFor(model => model.Warranty, "", new { @class = "text-danger" })
                     </div>
 
@@ -117,67 +125,33 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.CreatedDate)
-                        @Html.TextBoxFor(model => model.CreatedDate, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.CreatedDate, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.CreatedBy)
-                        @Html.TextBoxFor(model => model.CreatedBy, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.CreatedBy, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.ModifiedDate)
-                        @Html.TextBoxFor(model => model.ModifiedDate, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.ModifiedDate, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.ModifiedBy)
-
-                        @Html.TextBoxFor(model => model.ModifiedBy, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.ModifiedBy, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
                         @Html.LabelFor(model => model.MetaKeyWords)
-
                         @Html.TextBoxFor(model => model.MetaKeyWords, new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.MetaKeyWords, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.MetaDescription)
-
                         @Html.TextBoxFor(model => model.MetaDescription, new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.MetaDescription, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Status)
-
                         <div class="checkbox">
-                            @Html.TextBoxFor(model => model.Status)
+                            <label>
+                                @Html.CheckBoxFor(model => model.Status)
+                                Kích hoạt
+                            </label>
                             @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.TopMost)
-
-                        @Html.TextBoxFor(model => model.TopMost, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.TopMost, new { @class = "form-control", @type = "date" })
                         @Html.ValidationMessageFor(model => model.TopMost, "", new { @class = "text-danger" })
                     </div>
-
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.ViewCount)
-                        @Html.TextBoxFor(model => model.ViewCount, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.ViewCount, "", new { @class = "text-danger" })
-                    </div>
-
                 </div>
                 <!-- /.box-body -->
                 <div class="box-footer">
